--- a/game/package.json
+++ b/game/package.json
@@ -9,6 +9,7 @@
   "author": "hypothete",
   "license": "ISC",
   "dependencies": {
-    "tracking": "^1.1.3"
+    "tracking": "^1.1.3",
+    "vue": "^2.5.9"
   }
 }
